force-app/main/default/objects/Zco_Payment_Event__e/Zco_Payment_Event__e.object-meta.xml
<CustomObject>
    <description>Workbook-defined payment event platform event.</description>
    <label>Zco Payment Event</label>
    <pluralLabel>Zco Payment Event Events</pluralLabel>
</CustomObject>