force-app/main/default/objects/Zco_Payment_Event__e/fields/Gateway__c.field-meta.xml
<CustomField>
    <fullName>Gateway__c</fullName>
    <label>Gateway</label>
    <length>80</length>
    <type>Text</type>
</CustomField>