force-app/main/default/objects/Zco_Payment_Event__e/fields/Link_Id__c.field-meta.xml
<CustomField>
    <fullName>Link_Id__c</fullName>
    <label>Link ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>