force-app/main/default/objects/Zco_Payment_Event__e/fields/Txn_Id__c.field-meta.xml
<CustomField>
    <fullName>Txn_Id__c</fullName>
    <label>Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>